# Adv_rag

./: .env.example  .gitignore  .gitmessage  CHANGELOG.md  COURSE_PLAN_V2.md  DEMO_GUIDE.md  DEMO_VIDEO_SCRIPT.md  Dockerfile  IMPLEMENTATION_PLAN.md  LESSON.md  Makefile  PRD.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: config.py  main.py  models.py
app/api/: admin.py  auth.py  chat.py  query.py  upload.py
app/core/: graph.py  state.py
app/middleware/: auth.py  rate_limiter.py
app/security/: content_moderation.py  input_guard.py  input_restructuring.py  output_validator.py  spotlighting.py  system_prompt.py  token_budget.py
app/services/: crag.py  doc_cache_service.py  document_processor.py  hyde.py  (+12 more)
docs/: DEPLOYMENT_GUIDE.md  FEATURE_TEST_GUIDE.md
eval/: AUTHORING_REPORT.md  IMPL_PLAN.md  README.md  __init__.py  diff.py  invokers.py  post_checks.py  profiles.py  ragas_adapter.py  reporting.py  run_ragas.py  schema.py  seed_questions.yaml
infra/: cloudformation-params.json  cloudformation-params.json.example  cloudformation.yaml  deploy-cloudformation.sh  setup.sh
issues/: 0001-repo-scaffold.md  0002-auth-foundation.md  0003-rate-limit-token-budget.md  0004-langgraph-skeleton.md  0005-naive-rag-path.md  0006-sql-path-interrupt.md  0007-hybrid-search.md  0008-cross-encoder-rerank.md  0009-hyde.md  0010-llm-intent-router.md  0011-crag-tavily.md  0012-self-rag.md  0013-eval-harness.md  0014-redis-cache-tiers.md  0015-document-dedup.md  0016-llm-guard-moderation.md  0017-pdf-upload-security.md  0018-aws-infra-setup.md  0019-github-actions-cd.md  README.md
scripts/: demo_stakeholders.py  deploy_ecs.sh  eval.py  seed_db.py  serve.py  streamlit_app.py  validate_goldens.py  verify_demo_via_api.py
seed/: postgres_seed.sql
(+109 files in other folders)
