[project]
name = "adv-rag"
version = "0.1.0"
description = "Advanced RAG: Text2SQL + Core RAG + Caching + LLM Security"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Settings & validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # LLM
    "openai>=1.54.0",
    "tiktoken>=0.8.0",

    # Agent orchestration
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0",

    # Vector DB & embeddings
    "qdrant-client>=1.12.0",

    # Doc parsing
    "docling>=2.9.0",

    # Text2SQL
    "vanna[openai,postgres]>=0.7.0",

    # Postgres
    "psycopg2-binary>=2.9.10",

    # Cache
    "upstash-redis>=1.2.0",
    "httpx>=0.27.0",

    # Auth
    "pyjwt>=2.10.0",
    "passlib[bcrypt]>=1.7.4",

    # Logging
    "loguru>=0.7.2",

    # === Phase 2+ deps pinned now to avoid churn ===
    "sentence-transformers>=3.3.0",
    "voyageai>=0.3.0",
    "tavily-python>=0.5.0",

    # === Phase 4 deps ===
    "llm-guard>=0.3.15",
    "boto3>=1.35.0",
    "pypdf>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "ragas>=0.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
